Changed image size and floats of voted items in .myvotes

--- a/voting_open.html
+++ b/voting_open.html
@@ -347,7 +347,7 @@
 
 				<h3>My Votes</h3>
 				<form id="vote-form" action="#">
-					<ol class="myvotes">
+					<ol class="myvotes clearfix">
 
 					</ol>
 					<input type="submit" style="display: none;" />
