Updated html for the tea tiles on index

--- a/voting_open.html
+++ b/voting_open.html
@@ -117,8 +117,8 @@
 
 				<h2>Voting is Open!</h3>
 
-				<button>Vote</button>
-				<button>Nominate</button>
+				<!--<button class="tab">Vote</button>
+				<button class="tab">Nominate</button>-->
 				
 				<div class="row-voting clearfix">
 					
