Updated styling for index tiles

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<h1>Best Teas of 2015</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin viverra nisi orci, a viverra magna consectetur quis. Sed sagittis sem convallis velit convallis, vitae consectetur diam gravida. Fusce vel eros lacinia, venenatis justo ut, egestas quam. Ut ut lorem id velit consectetur bibendum. In ornare orci ex, nec volutpat urna egestas et. Sed mattis bibendum risus. Ut consectetur at metus eget condimentum. Proin facilisis blandit aliquet. Etiam blandit eleifend tellus at placerat. Suspendisse laoreet lobortis gravida.</p>
 				<h2 class="vote-count">1,000,000 Votes Cast</h2>
-				<a class="hero-button" href="#">Vote Now!</a>
+				<a class="hero-button" href="voting_open.html">Vote Now!</a>
 				<p>Voting closes in X days.</p>
 
 			</div>
@@ -132,7 +132,7 @@
 								</a>
 							</div>
 						</div>
-						<a href="#/" class="category-button">Vote for Black Teas Now!</a>
+						<a href="voting_open.html" class="category-button">Vote for Black Teas Now!</a>
 					</div>
 					
 					<div class="tile-category">
@@ -154,7 +154,7 @@
 								</a>
 							</div>
 						</div>
-						<a href="#/" class="category-button">Vote for Black Teas Now!</a>
+						<a href="voting_open.html" class="category-button">Vote for Black Teas Now!</a>
 					</div>
 					
 					<div class="tile-category">
@@ -176,7 +176,7 @@
 								</a>
 							</div>
 						</div>
-						<a href="#/" class="category-button">Vote for Black Teas Now!</a>
+						<a href="voting_open.html" class="category-button">Vote for Black Teas Now!</a>
 					</div>
 				</div>
 
