--- a/voting_open.html
+++ b/voting_open.html
@@ -49,7 +49,7 @@
 							<li><a href="#">Places</a></li>
 							<li><a href="#">Discussions</a></li>
 							<li><a href="#">Explore</a></li>
-							<li><a href="#">Voting</a></li>
+							<li><a href="index.html">Voting</a></li>
 						</ul>
 					</nav>
 
